--- a/infra/k8s/auth.depl.yaml
+++ b/infra/k8s/auth.depl.yaml
@@ -15,6 +15,12 @@ spec:
       containers: 
       - name: auth
         image: marjugoncalves/auth
+        env:
+          - name: JWT_KEY
+            valueFrom:
+              secretKeyRef:
+                name: jwt-secret
+                key: JWT_KEY
 
 ---
 
