--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /auth/node_modules
-auth/package-lock.json
+/client/node_modules
+/client/package-lock.json
+/auth/package-lock.json
 *-secrets.yaml
 
