--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@
 /client/node_modules
 /client/package-lock.json
 /auth/package-lock.json
+/tickets/node_modules
+/tickets/package-lock.json
 *-secrets.yaml
 
